@@ -7,6 +7,7 @@ javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -c
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/gameplay/GamePlayController.java
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/Main.java
 javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/entity/map/GameMap.java
+javac --module-path game\javafx\lib --add-modules=javafx.controls,javafx.fxml -classpath "game/classes" game/entity/entity/enemy/Ghost.java
 
 
 
